# fusionSW

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeLists.txt.old  coreAllocation.ioc  coreAllocationV2.ioc  readme.md
cmake/: readme.md
docs/: build.md
lib/: readme.md
src/: readme.md  readme.txt
src/driver/: CMakeLists.txt  DigitalOut.h  bus.c  bus.h  makefile.mk  radio.h  rfm22.c  rfm22.h  spi.cpp  spi.h  sx.cpp  sx.h  sx126x.c  sx126x.cpp  sx126x.h  sx126x_hal.c
src/driver/base/: sx126x-hal.h  sx126x.c  sx126x.h
src/ext/: CMakeLists.txt
src/ext/ref/: DemoApplication.cpp  openlrs.c  openlrs.h
src/ext/sx126xLib/: main_pingpong.cpp  radio.h  sx126x-hal.cpp  sx126x-hal.h  sx126x.cpp  sx126x.h
src/input/: inThread.c  inThread.h  makefile.mk
src/output/: DemoApplication.h  makefile.mk  modemThread.c  modemThread.cpp  modemThread.h  outThread.c  outThread.cpp  outThread.h  testThread.cpp
src/protocol/: CMakeLists.txt  crsf.c  crsf.h  ibus.c  ibus.h  makefile.mk  proto.h
src/threads/: CMakeLists.txt  convThread.cpp  convThread.h  inThread.c  inThread.h  makefile.mk  modemThread.cpp  modemThread.h  outThread.cpp  outThread.h  serialThread.cpp  serialThread.h
src/utils/: CMakeLists.txt  crc.c  crc.h  log_core.c  log_core.h  log_file.c  log_file.h  log_serial.c  log_serial.h  log_swo.c  log_swo.h  makefile.mk  msg_core.c  msg_core.h
support/: readme.md
support/lauterbach/: stm32_startup_swd.cmm
support/openocd/: stm32_f4-AtomRx.cfg  stm32_f4-Nucleo.cfg
variant/: readme.md
variant/RT-STM32F446RE-NUCLEO64/: Makefile  board.c  config.h  main.c  main.cpp  main.h  readme.txt
variant/RT-STM32F446RE-NUCLEO64/cfg/: chconf.h  halconf.h  mcuconf.h
variant/atomRX/: CMakeLists.txt  Makefile  board.h  config.h  main.c  main.cpp  main.h  readme.txt
variant/atomRX/cfg/: chconf.h  halconf.h  mcuconf.h
variant/fusionDisplay/: CMakeLists.txt
variant/fusionTX/: CMakeLists.txt  lv_conf.h  main.cpp
